--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tauri-apps/api": "1.4.0",
     "axios": "^1.6.1",
     "roboto-fontface": "0.10.0",
+    "socket.io-client": "^4.7.2",
     "unified-network": "0.6.4",
     "vue": "3.3.4",
     "vuetify": "3.3.7"
