--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@vitejs/plugin-vue": "4.0.0",
     "concurrently": "^8.2.2",
     "cross-env": "7.0.3",
+    "http-proxy-middleware": "^2.0.6",
     "sass": "1.63.6",
     "vite": "4.4.2",
     "vite-plugin-vuetify": "1.0.2"
