--- a/client/src-tauri/Cargo.toml
+++ b/client/src-tauri/Cargo.toml
@@ -39,6 +39,8 @@ once_cell = "1.17.1"
 arc-swap = "1.6.0"
 atomic_enum = "0.2.0"
 portaudio = "0.7.0"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+tokio = { version = "1", features = ["full"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
