--- a/client/src-tauri/Cargo.toml
+++ b/client/src-tauri/Cargo.toml
@@ -41,6 +41,8 @@ atomic_enum = "0.2.0"
 portaudio = "0.7.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 tokio = { version = "1", features = ["full"] }
+chrono = "0.4"
+chatgpt_rs = "1.2.3"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
