--- a/client/src-tauri/Cargo.toml
+++ b/client/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/libs/lib.rs"
 tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
-tauri = { version = "1.2", features = ["dialog-message", "path-all", "shell-open"] }
+tauri = { version = "1.2", features = [ "window-close", "window-set-fullscreen", "process-relaunch", "fs-read-dir", "fs-write-file", "window-unmaximize", "window-minimize", "window-unminimize", "window-start-dragging", "window-set-decorations", "window-set-size", "window-set-focus", "system-tray", "window-maximize", "fs-create-dir", "dialog-message", "path-all", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 lazy_static = "1.4.0"
