--- a/client/src-tauri/commands/browser/command.yaml
+++ b/client/src-tauri/commands/browser/command.yaml
@@ -148,6 +148,7 @@ list:
     - ok4
   phrases:
   - закрой вкладку
+  - закрой эту вкладку
   - закрой текущую вкладку
 
 - command:
@@ -189,8 +190,9 @@ list:
     - ok2
     - ok3
   phrases:
-  - переключи вправо
-  - вправо
+  - следующая вкладка
+  - вкладка право
+  - вкладка вправо
   - вкладку вправо
 
 - command:
@@ -203,8 +205,9 @@ list:
     - ok2
     - ok3
   phrases:
-  - переключи влево
-  - влево
+  - предыдущая вкладка
+  - вкладка лево
+  - вкладка влево
   - вкладку влево
 
 - command:
@@ -326,6 +329,21 @@ list:
   - включи восьмую вкладку
   - открой восьмую вкладку
   - восьмая вкладка
+
+- command:
+    action: ahk
+    exe_path: ahk/New tab.exe
+    exe_args:
+  voice:
+    sounds:
+    - ok1
+    - ok2
+    - ok3
+  phrases:
+  - открой новую вкладку
+  - открой новое вкладку
+  - открой ещё одну вкладку
+  - новая вкладка
 
 - command:
     action: ahk
