--- a/client/src-tauri/Cargo.toml
+++ b/client/src-tauri/Cargo.toml
@@ -45,6 +45,7 @@ chrono = "0.4"
 dotenv = "0.15"
 tts = "0.3.0"
 tts_rust = "0.3.4"
+regex = "1.5"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
