--- a/client/src-tauri/commands/charlie/command.yaml
+++ b/client/src-tauri/commands/charlie/command.yaml
@@ -1,97 +1,105 @@
 list:
-- command:
-    action: ahk
-    exe_path: ahk/reboot.exe
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - перезагрузись
-  - перезагрузи себя
-  - выполни перезагрузку
+  - command:
+      action: ahk
+      exe_path: ahk/reboot.exe
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - перезагрузись
+      - перезагрузи себя
+      - выполни перезагрузку
 
-- command:
-    action: voice
-  voice:
-    sounds:
-    - stupid
-  phrases:
-  - ты дурак
-  - ты дебил
-  - ты глупый
-  - ты тупой
+  - command:
+      action: voice
+    voice:
+      sounds:
+        - stupid
+    phrases:
+      - ты дурак
+      - ты дебил
+      - ты глупый
+      - ты тупой
 
-- command:
-    action: voice
-  voice:
-    sounds:
-    - thanks
-  phrases:
-  - спасибо
-  - молодец
-  - респект
-  - ты супер
-  - отличная работа
-  - ты крут
-  - ты большой молодец
-  - ты реально крут
-  - ты афигенный
+  - command:
+      action: voice
+    voice:
+      sounds:
+        - thanks
+    phrases:
+      - спасибо
+      - молодец
+      - респект
+      - ты супер
+      - отличная работа
+      - ты крут
+      - ты большой молодец
+      - ты реально крут
+      - ты афигенный
 
-- command:
-    action: ahk
-    exe_path: ahk/open_commands.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-  phrases:
-    - открой команды
-    - открыть команды
-    - разработка команд
-    - твои настройки
-    - твоя настройка
-    - открой свои настройки
-    - открой свои команды
+  - command:
+      action: ahk
+      exe_path: ahk/open_commands.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+    phrases:
+      - открой команды
+      - открыть команды
+      - разработка команд
+      - твои настройки
+      - твоя настройка
+      - открой свои настройки
+      - открой свои команды
 
-- command:
-    action: ahk
-    exe_path: ahk/current_location.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-  phrases:
-    - открой свою папку
-    - открой своё расположение
-    - открой свою директорию
-    - твоя директория
-    - твоя разработка
-    - разработка
-    - давай тебя подлатаем
+  - command:
+      action: ahk
+      exe_path: ahk/current_location.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+    phrases:
+      - открой свою папку
+      - открой своё расположение
+      - открой свою директорию
+      - твоя директория
+      - твоя разработка
+      - разработка
+      - давай тебя подлатаем
 
-- command:
-    action: voice
-  voice:
-    sounds:
-    - thanks
-  phrases:
-  - спасибо
-  - молодец
-  - респект
-  - ты супер
-  - отличная работа
-  - ты крут
-  - ты большой молодец
-  - ты реально крут
-  - ты афигенный
-  - классная шутка
-  - очень смешно
-  - ты меня рассмешил
-  - веселая шутка
-  - смешной анекдот
-  - это было весело
-  - интересная шутка
+  - command:
+      action: voice
+    voice:
+      sounds:
+        - thanks
+    phrases:
+      - спасибо
+      - молодец
+      - респект
+      - ты супер
+      - отличная работа
+      - ты крут
+      - ты большой молодец
+      - ты реально крут
+      - ты афигенный
+      - классная шутка
+      - очень смешно
+      - ты меня рассмешил
+      - веселая шутка
+      - смешной анекдот
+      - это было весело
+      - интересная шутка
+
+  - command:
+      action: "search"
+    voice:
+      sounds:
+        - load_r2d2
+    phrases:
+      - тест
