--- a/client/src-tauri/src/tts/requirements.txt
+++ b/client/src-tauri/src/tts/requirements.txt
@@ -1,9 +1,17 @@
-simpleaudio
-torch
-numpy
-num2words
-transliterate
-sounddevice
-asyncio
-pydub
-aiohttp
+edge-tts==6.1.7
+fairseq==0.12.2
+faiss-cpu==1.7.4
+librosa==0.9.1
+numba==0.58.0
+numpy==1.23.5
+praat-parselmouth==0.4.3
+pydub==0.25.1
+pyworld==0.3.4
+scipy==1.11.3
+soundfile==0.12.1
+gradio==3.38.0
+spleeter==2.4.0
+tensorflow==2.9.3
+yt-dlp==2023.10.7
+torchcrepe==0.0.20
+pygame==2.5.2
