calibration of commands and sound

--- a/client/src-tauri/commands/browser/command.yaml
+++ b/client/src-tauri/commands/browser/command.yaml
@@ -1,398 +1,413 @@
 list:
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Run browser.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - открой браузер
-  - запусти браузер
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Run browser.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - открой браузер
+      - запусти браузер
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Close browser.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - закрой браузер
-  - выключи браузер
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Close browser.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - закрой браузер
+      - выключи браузер
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Go back.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - вернись назад
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Go back.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - вернись назад
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Go forward.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - вернись вперед
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Go forward.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - вернись вперед
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Update tab.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - обнови вкладку
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Update tab.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - обнови вкладку
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Close tab.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - закрой вкладку
-  - закрой эту вкладку
-  - закрой текущую вкладку
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Close tab.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - закрой вкладку
+      - закрой эту вкладку
+      - закрой текущую вкладку
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Tab right.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - следующая вкладка
-  - вкладка право
-  - вкладка вправо
-  - вкладку вправо
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Tab right.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - следующая вкладка
+      - вкладка право
+      - вкладка вправо
+      - вкладку вправо
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Tab left.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - предыдущая вкладка
-  - вкладка лево
-  - вкладка влево
-  - вкладку влево
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Tab left.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - предыдущая вкладка
+      - вкладка лево
+      - вкладка влево
+      - вкладку влево
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Tab 1.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - переключи на первую вкладку
-  - включи первую вкладку
-  - открой первую вкладку
-  - первая вкладка
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Tab 1.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - переключи на первую вкладку
+      - включи первую вкладку
+      - открой первую вкладку
+      - первая вкладка
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Tab 2.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - переключи на вторую вкладку
-  - включи вторую вкладку
-  - открой вторую вкладку
-  - вторая вкладка
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Tab 2.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - переключи на вторую вкладку
+      - включи вторую вкладку
+      - открой вторую вкладку
+      - вторая вкладка
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Tab 3.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - переключи на третью вкладку
-  - включи третью вкладку
-  - открой третью вкладку
-  - третья вкладка
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Tab 3.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - переключи на третью вкладку
+      - включи третью вкладку
+      - открой третью вкладку
+      - третья вкладка
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Tab 4.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - переключи на четвертую вкладку
-  - включи четвертую вкладку
-  - открой четвертую вкладку
-  - четвертая вкладка
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Tab 4.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - переключи на четвертую вкладку
+      - включи четвертую вкладку
+      - открой четвертую вкладку
+      - четвертая вкладка
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Tab 5.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - переключи на пятую вкладку
-  - включи пятую вкладку
-  - открой пятую вкладку
-  - пятая вкладка
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Tab 5.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - переключи на пятую вкладку
+      - включи пятую вкладку
+      - открой пятую вкладку
+      - пятая вкладка
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Tab 6.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - переключи на шестую вкладку
-  - включи шестую вкладку
-  - открой шестую вкладку
-  - шестая вкладка
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Tab 6.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - переключи на шестую вкладку
+      - включи шестую вкладку
+      - открой шестую вкладку
+      - шестая вкладка
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Tab 7.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - переключи на седьмую вкладку
-  - включи седьмую вкладку
-  - открой седьмую вкладку
-  - седьмая вкладка
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Tab 7.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - переключи на седьмую вкладку
+      - включи седьмую вкладку
+      - открой седьмую вкладку
+      - седьмая вкладка
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Tab 8.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - переключи на восьмую вкладку
-  - включи восьмую вкладку
-  - открой восьмую вкладку
-  - восьмая вкладка
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Tab 8.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - переключи на восьмую вкладку
+      - включи восьмую вкладку
+      - открой восьмую вкладку
+      - восьмая вкладка
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/New tab.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - открой новую вкладку
-  - открой новое вкладку
-  - открой ещё одну вкладку
-  - новая вкладка
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/New tab.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - открой новую вкладку
+      - открой новое вкладку
+      - открой ещё одну вкладку
+      - новая вкладка
 
-- command:
-    action: ahk
-    exe_path: ahk/navigation/Tab end.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-  phrases:
-  - переключи на последнюю вкладку
-  - включи последнюю вкладку
-  - открой последнюю вкладку
-  - последняя вкладка
+  - command:
+      action: ahk
+      exe_path: ahk/navigation/Tab end.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - переключи на последнюю вкладку
+      - включи последнюю вкладку
+      - открой последнюю вкладку
+      - последняя вкладка
 
-#!================================================================
-#? --------------------------- Почта -----------------------------
-#!================================================================
+  #!================================================================
+  #? --------------------------- Почта -----------------------------
+  #!================================================================
 
-- command:
-    action: ahk
-    exe_path: ahk/web/Run mail yandex.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - открой яндекс почту
-  - запусти яндекс почту
-  - включи яндекс почту
-  - почта яндекс
+  - command:
+      action: ahk
+      exe_path: ahk/web/Run mail yandex.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - открой яндекс почту
+      - запусти яндекс почту
+      - включи яндекс почту
+      - почта яндекс
 
-- command:
-    action: ahk
-    exe_path: ahk/web/Run mail google.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - открой гугл почту
-  - запусти гугл почту
-  - включи гугл почту
-  - почта гугл
+  - command:
+      action: ahk
+      exe_path: ahk/web/Run mail google.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - открой гугл почту
+      - запусти гугл почту
+      - включи гугл почту
+      - почта гугл
 
-#!================================================================
-#? ------------------- Навигация по сайтам -----------------------
-#!================================================================
+  #!================================================================
+  #? ------------------- Навигация по сайтам -----------------------
+  #!================================================================
 
-- command:
-    action: ahk
-    exe_path: ahk/web/Run youtube.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - открой ютуб
-  - ютуб
-  - запусти ютуб
+  - command:
+      action: ahk
+      exe_path: ahk/web/Run youtube.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - открой ютуб
+      - ютуб
+      - запусти ютуб
 
-- command:
-    action: ahk
-    exe_path: ahk/web/Run translater.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - открой переводчик
-  - запусти переводчик
-  - включи переводчик
-  - переводчик
+  - command:
+      action: ahk
+      exe_path: ahk/web/Run translater.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - открой переводчик
+      - запусти переводчик
+      - включи переводчик
+      - переводчик
 
-- command:
-    action: ahk
-    exe_path: ahk/web/Run vk.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - открой вконтакте
-  - запусти вконтакте
-  - включи вконтакте
-  - вконтакте
-  - открой в контакте
-  - запусти в контакте
-  - включи в контакте
-  - в контакте
-  - контакт
-  - открой контакт
-  - запусти контакт
-  - включи контакт
+  - command:
+      action: ahk
+      exe_path: ahk/web/Run vk.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - открой вконтакте
+      - запусти вконтакте
+      - включи вконтакте
+      - вконтакте
+      - открой в контакте
+      - запусти в контакте
+      - включи в контакте
+      - в контакте
+      - контакт
+      - открой контакт
+      - запусти контакт
+      - включи контакт
 
-- command:
-    action: ahk
-    exe_path: ahk/web/Run kinopoisk.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - открой кинопоиск
-  - запусти кинопоиск
-  - включи кинопоиск
-  - кинопоиск
-  - открой кино поиск
-  - запусти кино поиск
-  - включи кино поиск
-  - кино поиск
+  - command:
+      action: ahk
+      exe_path: ahk/web/Run kinopoisk.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - открой кинопоиск
+      - запусти кинопоиск
+      - включи кинопоиск
+      - кинопоиск
+      - открой кино поиск
+      - запусти кино поиск
+      - включи кино поиск
+      - кино поиск
 
-- command:
-    action: ahk
-    exe_path: ahk/web/Run github.exe
-    exe_args:
-  voice:
-    sounds:
-    - ok1
-    - ok2
-    - ok3
-    - ok4
-  phrases:
-  - открой гитхаб
-  - запусти гитхаб
-  - включи гитхаб
-  - гитхаб
-  - открой гит хаб
-  - запусти гит хаб
-  - включи гит хаб
-  - гитхаб
-  - гит хаб
+  - command:
+      action: ahk
+      exe_path: ahk/web/Run github.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - открой гитхаб
+      - запусти гитхаб
+      - включи гитхаб
+      - гитхаб
+      - открой гит хаб
+      - запусти гит хаб
+      - включи гит хаб
+      - гитхаб
+      - гит хаб
 
+  - command:
+      action: ahk
+      exe_path: ahk/web/Run scrum.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+        - ok4
+    phrases:
+      - открой скрам
+      - запусти скрам
+      - включи скрам
+      - скрам
