--- a/client/src-tauri/commands/charlie/command.yaml
+++ b/client/src-tauri/commands/charlie/command.yaml
@@ -1,16 +1,7 @@
 list:
-  - command:
-      action: ahk
-      exe_path: ahk/reboot.exe
-    voice:
-      sounds:
-        - ok1
-        - ok2
-        - ok3
-    phrases:
-      - перезагрузись
-      - перезагрузи себя
-      - выполни перезагрузку
+  #!================================================================
+  #? --------------------------- Реакции ---------------------------
+  #!================================================================
 
   - command:
       action: voice
@@ -32,12 +23,39 @@ list:
       - спасибо
       - молодец
       - респект
-      - ты супер
+      - супер
       - отличная работа
-      - ты крут
-      - ты большой молодец
-      - ты реально крут
-      - ты афигенный
+      - здорово
+      - ты молодец
+      - круто
+
+  - command:
+      action: voice
+    voice:
+      sounds:
+        - gratc
+    phrases:
+      - ну неужели
+      - ура
+      - наконецто
+      - прекрасно
+
+  #!================================================================
+  #? ---------------------------- Другое ---------------------------
+  #!================================================================
+
+  - command:
+      action: ahk
+      exe_path: ahk/reboot.exe
+    voice:
+      sounds:
+        - ok1
+        - ok2
+        - ok3
+    phrases:
+      - перезагрузись
+      - перезагрузи себя
+      - выполни перезагрузку
 
   - command:
       action: ahk
@@ -97,9 +115,39 @@ list:
       - интересная шутка
 
   - command:
+      action: ahk
+      exe_path: ahk/work_protocol_onn.exe
+      exe_args:
+    voice:
+      sounds:
+        - loading
+    phrases:
+      - активируй протокол работа
+      - протокол работа
+      - активируй работу
+      - включи работу
+      - запусти работу
+      - рабочий режим
+      - режим работа
+      - работа
+
+  - command:
+      action: ahk
+      exe_path: ahk/work_protocol_off.exe
+      exe_args:
+    voice:
+      sounds:
+        - ok1
+        - ok2
+    phrases:
+      - перейди в обычный режим
+      - включи обычный режим
+      - обычный режим
+
+  - command:
       action: "test"
     voice:
       sounds:
-        - load_r2d2
+        - test
     phrases:
       - тест
